More deprecation fix
Revert "More deprecation fix"

This reverts commit b87e553d4418bd0fd848b3ff644923204c78cd81.

Fix

Fixed