@@ -18,7 +18,6 @@ package agent.gdb.pty.linux;
 import java.io.*;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.*;
 
@@ -117,7 +116,13 @@ public class LinuxPtyChild extends LinuxPtyEndpoint implements PtyChild {
 		// TODO: Refactor this with SystemUtilities.getSourceLocationForClass()
 		URL url = LinuxPtyChild.class.getClassLoader().getResource(name);
 		String urlFile = url.getFile();
-		urlFile = URLDecoder.decode(urlFile, StandardCharsets.UTF_8);
+		try {
+			urlFile = URLDecoder.decode(urlFile, "UTF-8");
+		}
+		catch (UnsupportedEncodingException e) {
+			// can't happen, since we know the encoding is correct
+			throw new AssertionError(e);
+		}
 
 		if ("file".equals(url.getProtocol())) {
 			int packageLevel = Paths.get(name).getNameCount();
